# medical_app

./: .env.example  .gitignore  README.md  docker-compose.yml  pytest.ini
server/: Dockerfile  Makefile  entrypoint.sh  manage.py  pyproject.toml
server/core/: views.py
server/medical_project/: apps.py  asgi.py  router.py  settings.py  urls.py  wsgi.py
server/medical_project/filters/: __init__.py  annotations.py
server/medical_project/management/commands/: populate_db.py  wait_for_db.py
server/medical_project/migrations/: 0001_initial.py  0002_auto_20231217_1838.py
server/medical_project/models/: __init__.py  annotations.py  base.py  images.py
server/medical_project/schemas/: __init__.py  annotations.py  images.py
server/medical_project/serializers/: __init__.py  annotations.py  images.py
server/medical_project/views/: __init__.py  annotations.py  images.py
server/tests/base/: __init__.py  base.py  path_helper.py
server/tests/factories/: __init__.py  factory.py
server/tests/test_views/: test_annotations.py  test_images.py
